[project]
name = "ml-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "astunparse==1.6.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.6",
    "fastapi==0.115.6",
    "filetype==1.2.0",
    "flatbuffers==24.3.25",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "keras==3.7.0",
    "libclang==18.1.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "namex==0.0.8",
    "numpy==2.0.2",
    "opt-einsum==3.4.0",
    "optree==0.13.1",
    "packaging==24.2",
    "protobuf==5.29.1",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.12.0",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "uvloop==0.21.0",
    "watchfiles==1.0.0",
    "websockets==14.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.0",
    "opencv-python-headless>=4.10.0.84",
    "tensorflow-cpu>=2.18.0",
]
